# clawthon_near

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: ironclaw_client.py  main.py  orchestrator.py  ws_manager.py
backend/agents/: base.py  flight.py  hotel.py  local_guide.py  market_client.py
backend/chains/: near_pay.py  xrpl_pay.py
docs/: PRESENTATION.md  UI_SPEC.md
frontend/: app.js  i18n.js  index.html  mock.html  style.css
scripts/: SETUP.md  e2e_test.py  setup_xrpl_accounts.py  topup_market_account.md
