[project]
name = "agentic-travel-concierge"
version = "0.1.0"
description = "Autonomous AI Travel Concierge with cross-border on-chain settlement (Clawathon Tokyo Edition)"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "websockets>=13.0",
    "py-near>=1.1.50",
    "xrpl-py>=4.0.0",
    "jinja2>=3.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "backend.agents", "backend.chains"]
